# lastwords

./: .dockerignore  Dockerfile  README.md  bruh.csv  deathrow3.py  last.csv  lastwords.py  omggg.csv  pyproject.toml  requirements.txt  yo.csv  yo5.csv
.github/workflows/: weekly-sync.yml
data/: state.json
src/lastwords/: __init__.py  __main__.py  cli.py  config.py  models.py  state.py  tdcj.py  tumblr.py
tests/: test_parsers.py
