[project]
name = "lastwords"
version = "0.2.0"
description = "Sync TDCJ last statements to the lastwords.fyi Tumblr blog."
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { text = "MIT" }
dependencies = [
    "beautifulsoup4>=4.13.4",
    "loguru>=0.7.3",
    "pytumblr>=0.1.2",
    "requests>=2.32.3",
]

[project.scripts]
lastwords = "lastwords.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lastwords"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
